--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 class="text-center">CS460 - Software Engineering I</h2>
                 <p class="text-center">
                     Here is My project: <br>
-                    <a href=./README.md>CS460 Homeworks</a>
+                    <a href=./README.html>CS460 Homeworks</a>
                 </p>
         </div>
     </body>
