--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <h3 id="homework"> My Homework</h3>
             <dl>
-                <li class="view"><a href="https://github.com/chunzel16/page">Homewrok1</a></li>
+                <li class="view"><a href="https://chunzel16.github.io/page/index.html">Homewrok1</a></li>
             </dl>
         </section>
         <footer>
