--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
             <p></p>
             
-             <p class="view"><a href="https://github.com/chunzel16/CS460">View My GitHub Profile!</a></p>
+             <p class="view"><a href="https://github.com/chunzel16">View My GitHub Profile!</a></p>
 
         </header>
         <section>
@@ -32,6 +32,8 @@
             <h3 id="homework"> My Homework</h3>
             <dl>
                 <li class="view"><a href="https://chunzel16.github.io/HW1blog/.">Homewrok1(blog)</a></li>
+              <li class="view"><a href="https://chunzel16.github.io/HW1demo/index.html">Homework1(Demo)</a></li>
+             
             </dl>
         </section>
         <footer>
