--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <dl>
                 <li class="view"><a href="https://chunzel16.github.io/HW1blog/.">Homewrok1(blog)</a></li>
               <li class="view"><a href="https://chunzel16.github.io/HW1demo/index.html">Homework1(Demo)</a></li>
+              <li class="view"><a href="https://chunzel16.github.io/HW2blog/.">Homework2(blog)</a></li>
+              <li class="view"><a href="https://chunzel16.github.io/HW2demo/index.html">Homework2(Demo)</a></li>
+              
              
             </dl>
         </section>
